Step 3 - Operations with Spring Boot

--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,7 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
+springBoot {
+	buildInfo()
+}
