--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 management.endpoint.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
+helloworld.message="Hello World - default config file"
