--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 management.endpoint.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
 helloworld.message="Hello World - default config file"
+spring.cache.type=SIMPLE
