Step 9 - Data with Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ management.endpoint.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
 helloworld.message="Hello World - default config file"
 spring.cache.type=SIMPLE
+spring.jpa.show-sql=true
