--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('com.h2database:h2')
+	compile("mysql:mysql-connector-java")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
