--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('com.h2database:h2')
 	compile("mysql:mysql-connector-java")
+	compile("org.flywaydb:flyway-core")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
