Step 9.7 - BONUS - Simplify the Person Entity class by auto-generating Getters/Setters.

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	compile('com.h2database:h2')
 	compile("mysql:mysql-connector-java")
 	compile("org.flywaydb:flyway-core")
+
+	compileOnly 'org.projectlombok:lombok'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
