--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('com.h2database:h2')
 	compile("mysql:mysql-connector-java")
 	compile("org.flywaydb:flyway-core")
+	compile("org.springframework.boot:spring-boot-starter-amqp")
 
 	compileOnly 'org.projectlombok:lombok'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
