--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	compile("org.flywaydb:flyway-core")
 	compile("org.springframework.boot:spring-boot-starter-amqp")
 
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
