--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -86,22 +92,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-			<executions>
-				<execution>
-					<goals>
-						<goal>build-info</goal>
-					</goals>
-					<configuration>
-						<additionalProperties>
-							<encoding.source>UTF-8</encoding.source>
-							<encoding.reporting>UTF-8</encoding.reporting>
-							<java.source>${maven.compiler.source}</java.source>
-							<java.target>${maven.compiler.target}</java.target>
-						</additionalProperties>
-					</configuration>
-				</execution>
-			</executions>
 		</plugins>
 	</build>
 
