--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ management.endpoints.web.exposure.include=*
 helloworld.message="Hello World - default config file"
 spring.cache.type=SIMPLE
 spring.jpa.show-sql=true
+
+# log to local file to exponse logfile endpoint
+logging.file=application.log
